--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae esse nemo cupiditate consequatur maxime adipisci officiis veniam excepturi quas. Ipsum magni commodi non quidem, in maiores nulla! Illum expedita dolorum laudantium, odio quis excepturi voluptate quaerat laborum mollitia aliquam iusto aut eaque hic enim, totam, quod quia minima impedit quasi quos consectetur minus aliquid natus quidem? Facilis temporibus veritatis soluta beatae, accusantium rerum quasi dicta laboriosam aliquid aspernatur tempora autem!">
+    <meta name="keywords" content="motivation,miami conference,inspiration,politics">
+    <meta name="author" content="CALVIN ALDRICH KIMATHI">
     <title>The Miami Conference</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comforter&family=Neonderthaw&family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d4bf7e6836.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Top navigation bar starts -->
