--- a/index.html
+++ b/index.html
@@ -16,7 +16,42 @@
 </head>
 <body>
     <!-- Top navigation bar starts -->
+<header class="container">
+    <div class="row">
+<!-- first column starts  -->
+<div class="col-sm-12 col-md-12 col-lg-6 col-xxl-6">
+    <h3 class="text-sm-center text-lg-start text-uppercase text-primary">The Miami Conference</h3>
 
+    <p class="fw-lighter">
+        25<span>th</span>February 2022
+        <!-- sup is super script n can also be denoted as span -->
+    </p>
+</div>
+
+
+<!-- first column ends -->
+
+<!-- second section starts -->
+<div class="col-sm-12 col-md-12 col-lg-6">
+    <ul>
+        <li class=" d-none d-lg-inline" ><i class="fab fa-facebook"></i></li>
+        <li class=" d-none d-lg-inline"><i class="fab fa-twitter-square"></i></li>
+        <li class=" d-none d-lg-inline"><i class="fas fa-basketball-ball"></i></li>
+        <li class=" d-none d-lg-inline"><i class="fab fa-linkedin"></i></li>
+        <li class=" d-none d-lg-inline" ><i class="fab fa-behance-square"></i></li>
+        <li class=" d-none d-lg-inline"><i class="fab fa-pinterest"></i></li>
+      
+
+
+    </ul> 
+
+</div>
+
+<!-- second section ends -->
+
+         </div>
+
+</header>
 
     <!-- Top navigation bar ends -->
 
