--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Comforter&family=Neonderthaw&family=Poppins:wght@100&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d4bf7e6836.js" crossorigin="anonymous"></script>
+ <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!-- Top navigation bar starts -->
-<header class="container">
+<header class="container py-5">
     <div class="row">
 <!-- first column starts  -->
 <div class="col-sm-12 col-md-12 col-lg-6 col-xxl-6">
@@ -32,14 +33,14 @@
 <!-- first column ends -->
 
 <!-- second section starts -->
-<div class="col-sm-12 col-md-12 col-lg-6">
+<div class="col-sm-12 col-md-12 col-lg-6 text-end">
     <ul>
-        <li class=" d-none d-lg-inline" ><i class="fab fa-facebook"></i></li>
-        <li class=" d-none d-lg-inline"><i class="fab fa-twitter-square"></i></li>
-        <li class=" d-none d-lg-inline"><i class="fas fa-basketball-ball"></i></li>
-        <li class=" d-none d-lg-inline"><i class="fab fa-linkedin"></i></li>
-        <li class=" d-none d-lg-inline" ><i class="fab fa-behance-square"></i></li>
-        <li class=" d-none d-lg-inline"><i class="fab fa-pinterest"></i></li>
+        <li class=" d-none d-lg-inline px-3" ><i class="fab fa-facebook"></i></li>
+        <li class=" d-none d-lg-inline px-3"><i class="fab fa-twitter-square"></i></li>
+        <li class=" d-none d-lg-inline px-3"><i class="fas fa-basketball-ball"></i></li>
+        <li class=" d-none d-lg-inline px-3"><i class="fab fa-linkedin"></i></li>
+        <li class=" d-none d-lg-inline px-3" ><i class="fab fa-behance-square"></i></li>
+        <li class=" d-none d-lg-inline px-3"><i class="fab fa-pinterest"></i></li>
       
 
 
