--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="AboutUs.html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="Speakers.html ">Speakers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="Events.html">Events</a>
+          </li>
+          
           </li>
         </ul>
       </div>
@@ -88,7 +90,264 @@
 
 
 
+<!-- carousel section starts -->
+<div id="carouselExampleCaptions" class="carousel main-slider slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/images/joe-pohle-WYWff1kNmt0-unsplash.jpg" class="d-block w-100" alt="good intentions">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/willian-justen-de-vasconcellos-wBGtUYlPv4g-unsplash.jpg" class="d-block w-100" alt="good intentions">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="d-block w-100" alt="good intentions">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- carousel section ends -->
+   
+<!-- cards starts here  -->
+<div class="col-sm-12 col-md-12 col-lg-6">
+<div class="card" style="width: 18rem;">
+  <img src="./assets/images/cade-prior-t5DLH0-1lgE-unsplash.jpg" class="card-img-top" alt="good intentions">
+  <div class="card-body">
+    <h5 class="card-title">Lorem, ipsum dolor.</h5>
+    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, neque dignissimos. Quo, distinctio veniam! Nostrum voluptate vel mollitia numquam optio reiciendis explicabo temporibus veritatis nisi laborum error adipisci velit modi fugit impedit quidem deleniti esse accusamus ipsum alias, ad quasi similique? Autem laudantium est ullam. Aliquam reprehenderit vel vitae tempora sequi voluptatibus exercitationem sit doloribus veniam! Exercitationem recusandae provident aperiam!</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+
+  
+</div>
+</div>
+
+<div class="card" >
+  <img src="./assets/images/eduardo-dutra-qb7TJqzp6jU-unsplash.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Lorem, ipsum.</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi esse eum doloribus labore, perspiciatis fugit aperiam facilis at magni tenetur ad error. Ipsa repudiandae alias animi sint odio magnam omnis illo praesentium delectus? Repudiandae iure alias quibusdam nam repellat dolor laudantium doloremque, reprehenderit eos quidem laboriosam molestias id itaque?</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<div class="card" >
+  <img src="./assets/images/joe-pohle-WYWff1kNmt0-unsplash.jpg" class="card-img-top" alt="good intentions">
+  <div class="card-body">
+    <h5 class="card-title">Lorem ipsum dolor sit.</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<div class="card" >
+  <img src="./assets/images/joel-muniz-YoUIfgkbe_Y-unsplash.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Lorem, ipsum dolor.</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+<div class="col-sm-12 col-md-12 col-lg-6">
+<div class="card" >
+  <img src="./assets/images/microsoft-365-1OG9mfUQkxE-unsplash.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Lorem, ipsum dolor.</h5>
+    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+<div class="col-sm-12 col-md-12 col-lg-6"></div>
+<div class="card" >
+  <img src="./assets/images/mohammad-reza-KEjCCdVQIZU-unsplash.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Lorem ipsum dolor sit.</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+</div>
+
+
+<!-- cards ends here  -->
+
+<!-- timetable section starts here -->
+<section class="timetable container">
+<div class="row">
+
+<!-- first column starts -->
+<div class="col-sm-12 col-md-12 col-lg-6">
+  <p class="title">
+    <i class="fa-solid fa-calender"></i>
+      10 <sup>Th</sup> March Schedule
+  </p>
+  <!-- to multiply it three times (shift plus num.8) -->
+  <div class="row row-x">
+  <div class="col">
+    <img src="./assets/images/tyrell-james-HL6twTOUFqI-unsplash.jpg" class="img-fluid" alt="good images ">
+</div>
+<div class="col">
+  <h2>14:00</h2>
+</div>
+<div class="col">
+  <p class="lead">
+    class Patience
+  </p>
+</div>
+<div class="row row-x">
+<div class="col">
+  <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+  </div>
+  <div class="col">
+    <h2>15:00</h2>
+  </div>
+  <div class="col">
+    <p class="lead">
+      Business 101
+    </p>
+  </div>
+  <div class="row row-x">
+  <div class="col">
+    <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+  </div>
+  <div class="col">
+    <h2>16:00</h2>
+  </div>
+  <div class="col">
+    <p class="lead">
+      Business 101
+    </p>
+  </div>
+<div class="row row-x">
+  <div class="col">
+    <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+  </div>
+  <div class="col">
+    <h2>17:00</h2>
+  </div>
+  <div class="col">
+    <p class="lead">
+      Business 101
+    </p>
+  </div>
+<div class="row row-x">
+  <div class="col">
+    <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+  </div>
+  <div class="col">
+    <h2>20:00</h2>
+  </div>
+  <div class="col">
+    <p class="lead">
+      Business 101
+    </p>
+  </div>
+</div>
+
+</div>
+
+<!-- first column ends   -->
+<!-- second column begins -->
+<div class="row row-x">
+  <div class="col">
+    <img src="./assets/images/tyrell-james-HL6twTOUFqI-unsplash.jpg" class="img-fluid" alt="good images ">
+  </div>
+  <div class="col">
+    <h2>14:00</h2>
+  </div>
+  <div class="col">
+    <p class="lead">
+      class Patience
+    </p>
+  </div>
+  <div class="row row-x">
+    <div class="col">
+      <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+    </div>
+    <div class="col">
+      <h2>15:00</h2>
+    </div>
+    <div class="col">
+      <p class="lead">
+        Business 101
+      </p>
+    </div>
+  <div class="row row-x">
+    <div class="col">
+      <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+    </div>
+    <div class="col">
+      <h2>16:00</h2>
+    </div>
+    <div class="col">
+      <p class="lead">
+        Business 101
+      </p>
+    </div>
+  <div class="row row-x">
+    <div class="col">
+      <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+    </div>
+    <div class="col">
+      <h2>17:00</h2>
+    </div>
+    <div class="col">
+      <p class="lead">
+        Business 101
+      </p>
+    </div>
+  <div class="row row-x">
+    <div class="col">
+      <img src="./assets/images/olga-solodilova-f7ibaLlie6w-unsplash.jpg" class="img-fluid" alt="good images ">
+    </div>
+    <div class="col">
+      <h2>20:00</h2>
+    </div>
+    <div class="col">
+      <p class="lead">
+        Business 101
+      </p>
+    </div>
+  </div>
+  
+  </div>
+
+
+
+</div>
+<!-- second column ends  -->
+</div>
+</section>
+
+<!-- timetable section ends here -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
